# scopely_flask_redis_celery

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  docker-compose.yml  models.py  pyproject.toml  tasks.py
.github/workflows/: build.yml
